# Kursovaya1

./: .coverage  .env  .env.example  .flake8  .gitignore  README.md  config.py  main.py  pyproject.toml
data/: operations_test.xlsx
reports/: default_report.xlsx
src/: config.py  main.py  reports.py  services.py  utils.py  views.py
tests/: conftest.py  test_reports.py  test_services.py  test_utils.py  test_views.py
