[tool.poetry]
name = "kursovaya"
version = "0.1.0"
description = ""
authors = ["ruslankh <ruselkotya@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
load-dotenv = "^0.1.0"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
